; ModuleID = '/home/carl/AnghaBench/redis/src/extr_db.c_updateLFU.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_db.c_updateLFU.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @updateLFU(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = alloca i64, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %5 = call i64 @LFUDecrAndReturn(%struct.TYPE_4__* %4)
  store i64 %5, i64* %3, align 8
  %6 = load i64, i64* %3, align 8
  %7 = call i64 @LFULogIncr(i64 %6)
  store i64 %7, i64* %3, align 8
  %8 = call i32 (...) @LFUGetTimeInMinutes()
  %9 = shl i32 %8, 8
  %10 = sext i32 %9 to i64
  %11 = load i64, i64* %3, align 8
  %12 = or i64 %10, %11
  %13 = trunc i64 %12 to i32
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  store i32 %13, i32* %15, align 4
  ret void
}

declare dso_local i64 @LFUDecrAndReturn(%struct.TYPE_4__*) #1

declare dso_local i64 @LFULogIncr(i64) #1

declare dso_local i32 @LFUGetTimeInMinutes(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
